[gd_scene load_steps=5 format=3 uid="uid://cf6ynff73k666"]

[ext_resource type="Script" path="res://main.gd" id="1_teuwr"]
[ext_resource type="PackedScene" uid="uid://dxiabom1fry4a" path="res://player.tscn" id="1_v71kt"]
[ext_resource type="PackedScene" uid="uid://hnilseqmro2f" path="res://mob.tscn" id="2_u8g1d"]

[sub_resource type="Curve2D" id="Curve2D_3ci0y"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, -8, 0, 0, 0, 0, 480, -8, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, -8)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_teuwr")
mob_scene = ExtResource("2_u8g1d")

[node name="MobTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="StartTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(240, 450)

[node name="Player" parent="." instance=ExtResource("1_v71kt")]
unique_name_in_owner = true

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_3ci0y")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
unique_name_in_owner = true
position = Vector2(0, -8)

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="hit" from="Player" to="." method="game_over"]
